--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "start": "gulp",
     "build": "gulp build"
   },
-  "dependencies": {
-    "browser-sync": "^3.0.0",
-    "del": "^7.0.0",
+  "devDependencies": {
+    "browser-sync": "^3.0.4",
+    "del": "^8.0.0",
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^9.0.0",
-    "gulp-clean-css": "^5.0.0",
-    "gulp-htmlmin": "^6.0.0",
-    "gulp-imagemin": "^9.0.0",
-    "gulp-newer": "^2.0.0",
-    "gulp-sass": "^6.0.0",
-    "gulp-sourcemaps": "^4.0.0",
-    "gulp-terser": "^2.0.0",
-    "sass": "^1.72.0"
+    "gulp-clean-css": "^4.3.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^9.1.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-sass": "^6.0.1",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.1.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^11.0.1",
+    "sass": "^1.86.3"
   }
 }
