--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-terser": "^2.1.0",
     "imagemin-pngquant": "^10.0.0",
-    "sass": "^1.86.3"
+    "sass": "^1.86.3",
+    "svgo": "^3.3.2"
   },
   "optionalDependencies": {
     "fsevents": "^2.3.3"
@@ -441,7 +442,6 @@
     "supports-color": "^7.2.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
     "sver": "^1.8.4",
-    "svgo": "^2.8.0",
     "tar-stream": "^1.6.2",
     "teex": "^1.0.1",
     "temp-dir": "^1.0.0",
