chore: add deploy script and update README
Add a new 'deploy' script to package.json for deploying to Cloudflare Pages. Update README.md to include deployment instructions and improve formatting.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "deploy": "npm run build && wrangler pages deploy dist --project-name=gulp-2025"
   },
   "devDependencies": {
     "browser-sync": "^3.0.4",
